Added radio buttons for timeOfCreation selection and a div to contain the datetime-local input element to conditionally display it

--- a/budget_app_frontend/frontend_code/src/budgetApp.css
+++ b/budget_app_frontend/frontend_code/src/budgetApp.css
@@ -1,7 +1,7 @@
-.dropdown-menu {
+.dropdown-menu, .date-time-input {
     display: none;
   }
   
-  .dropdown-menu.show {
+.dropdown-menu-show, .date-time-input-show {
     display: flex; 
-  }
+}
